--- a/_config.yml
+++ b/_config.yml
@@ -17,3 +17,24 @@ github_username:  casten4congress
 
 # Build settings
 markdown: kramdown
+
+github: [metadata]
+encoding: UTF-8
+kramdown:
+  input: GFM
+  hard_wrap: false
+future: true
+jailed: false
+theme: jekyll-theme-primer
+gfm_quirks: paragraph_end
+
+lsi: false
+safe: true
+source: ''
+incremental: false
+highlighter: rouge
+gist:
+  noscript: false
+kramdown:
+  math_engine: mathjax
+  syntax_highlighter: rouge
